lantern/lantern-language/src/snapshots/lantern_language__parser__tests__basic_source.snap
---
source: lantern-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [],
}
