lantern/lantern-language/src/snapshots/lantern_language__parser__tests__math_precedence.snap
---
source: lantern-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                GreaterThan,
                Binary(
                    Add,
                    Field(
                        "a",
                    ),
                    Binary(
                        Multiply,
                        Field(
                            "b",
                        ),
                        Field(
                            "c",
                        ),
                    ),
                ),
                Number(
                    10.0,
                ),
            ),
        ),
    ],
}
