lantern/lantern-language/src/snapshots/lantern_language__parser__tests__should_fail.snap
---
source: lantern-language/src/parser.rs
expression: ast.unwrap_err()
---
ParserError(
    [
        found 'Pipe' at 7..8 expected something else,
    ],
)
