lantern/lantern-language/src/snapshots/lantern_language__parser__tests__string_quoting.snap
---
source: lantern-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                Equal,
                Field(
                    "name",
                ),
                String(
                    "\"O'Conner\"",
                ),
            ),
        ),
    ],
}
